--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -34,6 +34,9 @@
 <%= subheader("News") %>
 <ul class="important_dates">
   <li>
+       Dates for Visual Storytelling Contest were changed: Notification to Feb 16, and Final submission to Feb 28.
+  </li>
+  <li>
     <b>
       Registration is now available! <%= link_to "Link", registration_path, :target=>"_blank" %>
     </b>
