--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -35,6 +35,11 @@
 <ul class="important_dates">
   <li>
     <b>
+      Programs and Keynote information is updated. <%= link_to "Link", programs_path %>
+    </b>
+  </li>
+  <li>
+    <b>
       Registration is now available! <%= link_to "Link", registration_path, :target=>"_blank" %>
     </b>
   </li>
