--- a/app/views/application/_keynote_element.html.erb
+++ b/app/views/application/_keynote_element.html.erb
@@ -1,18 +1,20 @@
-<table class="keynote_element">
-    <tr>
-        <td class="thumb">
-            <div class="thumb_wrapper">
-                <%= image_tag keynote[:thumbnail] %>
-            </div>
-        </td>
-        <td class="description">
-            <div>
-                <span class="program_type keynote day">Day <%= keynote[:day] %></span>
-            </div>
-            
-            <span class="name"><%= keynote[:presenter] %></span>
-            <span class="affiliation"><%= keynote[:affiliation] %></span>
-            <div class="title">"<%= keynote[:title].html_safe %>"</div>
-        </td>
-    </tr>
-</table>
+<div class="keynote_element">
+    <table>
+        <tr>
+            <td class="thumb">
+                <div class="thumb_wrapper">
+                    <%= image_tag keynote[:thumbnail] %>
+                </div>
+            </td>
+            <td class="description">
+                <div>
+                    <span class="program_type keynote day">Day <%= keynote[:day] %></span>
+                </div>
+                
+                <span class="name"><%= keynote[:presenter] %></span>
+                <span class="affiliation"><%= keynote[:affiliation] %></span>
+                <div class="title">"<%= keynote[:title].html_safe %>"</div>
+            </td>
+        </tr>
+    </table>
+</div>
