--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -35,11 +35,13 @@
 <ul class="important_dates">
   <li>
     <b>
-      Programs and Keynote information is updated. <%= link_to "Link", programs_path %>
+      The early bird registration ends at March 17!
     </b>
   </li>
   <li>
-       Dates for Visual Storytelling Contest were changed: Notification to Feb 16, and Final submission to Feb 28.
+    <b>
+      Conference program and keynote talks are updated. <%= link_to "Link", programs_path %>
+    </b>
   </li>
   <li>
     <b>
