--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,21 +1,112 @@
-<p>Detailed time tables will be announced soon.</p>
+<table class="program_time_table">
+  <tr class="days">
+      <td width=14%></td>
+      <th width="21%"><span class="title">Day 1</span><br><span class="date">Apr 18</span></th>
+      <th width="21%"><span class="title">Day 2</span><br><span class="date">Apr 19</span></th>
+      <th width="21%"><span class="title">Day 3</span><br><span class="date">Apr 20</span></th>
+      <th width="21%"><span class="title">Day 4</span><br><span class="date">Apr 21</span></th>
+  </tr>
+  <tr class="normal">
+    <th>08:00 - 08:40</th>
+    <td colspan="4" class="registration" >Registration</td>
+  </tr>
 
+  <tr class="normal">
+    <th>08:40 - 09:00</th>
+    <td rowspan="10" class="vast">Pacific VAST</td>
+    <td>Opening</td>
+    <td>Posters Fast-forward</td>
+    <%= session(7, 2) %>
+  </tr>
+
+  <tr class="normal">
+    <th>09:00 - 10:00</th>
+    <td>
+    <a href="#keynote_0"
+    <div class="session">Keynote 1</div><div class="session_title">David Ebert</div>
+    </a>
+    </td>
+
+    <td>
+    <a href="#keynote_1">
+    <div class="session">Keynote 2</div><div class="session_title">Gerard Jounghyun Kim</div>
+    </a>
+    </td>
+  </tr>
+
+  <tr class="normal">
+    <th>10:00 - 10:20</th>
+    <%= cell_coffee(3) %>
+  </tr>
+
+  <tr class="normal">
+    <th>10:20 - 11:40</th>
+    <%= session(0) %>
+    <%= session(4) %>
+    <%= session(8) %>
+  </tr>
+
+<tr class="normal">
+    <th>11:40 - 13:00</th>
+    <td colspan="2" class="lunch">Lunch break</td>
+    <td>Closing (30 mins)</td>
+  </tr>
+
+<tr class="normal">
+    <th>13:00 - 14:20</th>
+    <%= session(1) %>
+    <%= session(5) %>
+    <td rowspan="6" class="empty"></td>
+  </tr>
+
+<tr class="normal">
+    <th>14:20 - 14:40</th>
+    <%= cell_coffee(2) %>
+  </tr>
+
+  <tr class="normal">
+    <th>14:40 - 16:00</th>
+    <%= session(2) %>
+    <%= session(6) %>
+  </tr>
+
+
+<tr class="normal">
+    <th>16:00 - 16:20</th>
+    <%= cell_coffee(2) %>
+  </tr>
+
+  <tr class="normal">
+    <th>16:20 - 18:00</th>
+    <%= session(3) %>
+    <td class="posters"><a href="#posters">Posters</a> & <a href="#contest">Visual Storytelling Contest</a></td>
+  </tr>
+
+  <tr class="normal">
+    <td colspan="2"></td>
+    <td>Reception (Faculy House)</td>
+    <td>Banquit (Yangjae)</td>
+  </tr>
+
+  
+</table>
 
 <%= subheader("Keynotes") %>
 <ul class="keynote_list">
-<% @keynotes.each do |keynote| %>
-  <li>
-  <%= link_to keynote_path(keynote[:day]) do %>
-    <%= render :partial=>"keynote_element", :locals=>{:keynote=>keynote} %>
+<% @keynotes.each_with_index do |keynote, index| %>
+  <%= content_tag :li, :id=>"keynote_#{index}" do %>
+    <%= link_to keynote_path(keynote[:day]) do %>
+      <%= render :partial=>"keynote_element", :locals=>{:keynote=>keynote} %>
+    <% end %>
   <% end %>
-  </li>
 <% end %>
 </ul>
 
 <%= subheader("Sessions") %>
-<% @session_dict.each do |session_name, programs| %>
+<% @session_ordered_names.each_with_index do |session_name, index|%>
+<% programs = @session_dict[session_name] %>
 
-  <h3><%= session_name %></h3>
+  <%= content_tag :h3, session_name, :id=>"session_#{index}" %>
 
   <ul class="program_list">
     <% programs.each do |paper| %>
@@ -25,6 +116,7 @@
 
 <% end %>
 
+<div id="posters"></div>
 <%= subheader("Posters") %>
 <ul class="program_list">
   <% @posters.each do |paper| %>
@@ -33,12 +125,8 @@
 </ul>
 
 
-<%= subheader("Visualization Contests") %>
-<ul class="program_list">
-  <% @contests.each do |paper| %>
-    <%= render :partial=>'program_element', :locals=>{:program=>paper} %>
-  <% end %>
-</ul>
+<div id="contest"></div>
+<%= subheader("Visual Storytelling Contest") %>
 <ul class="program_list">
   <% @contests.each do |paper| %>
     <%= render :partial=>'program_element', :locals=>{:program=>paper} %>
