--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -34,23 +34,18 @@
 <%= subheader("News") %>
 <ul class="important_dates">
   <li>
-    <b>
-      The early bird registration ends at March 17!
-    </b>
+    Mar 7] The early bird registration ends at March 17!
   </li>
   <li>
-    <b>
-      Conference program and keynote talks are updated. <%= link_to "Link", programs_path %>
-    </b>
+      Mar 7] Conference <%= link_to "program and keynote talks", programs_path %> are updated.
   </li>
   <li>
-    <b>
-      Registration is now available! <%= link_to "Link", registration_path, :target=>"_blank" %>
-    </b>
+    Feb]
+      <%= link_to "Registration", registration_path, :target=>"_blank" %> is now available!
   </li>
-  <li><b>
-    Accommodation information was updated: <%= link_to "Link", venue_path(:anchor=>"accommodations") %>
-  </b></li>
+  <li>
+    Feb] <%= link_to "Accommodation information", venue_path(:anchor=>"accommodations") %> was updated.
+  </li>
 </ul>
 
 <%= subheader("Sponsors") %>
