--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -13,7 +13,7 @@
 
   <tr class="normal">
     <th>08:40 - 09:00</th>
-    <td rowspan="10" class="vast">Pacific VAST</td>
+    <td rowspan="10" class="vast">PacificVAST</td>
     <td>Opening</td>
     <td>Posters Fast-forward</td>
     <%= session(7, 2) %>
@@ -22,7 +22,7 @@
   <tr class="normal">
     <th>09:00 - 10:00</th>
     <td>
-    <a href="#keynote_0"
+      <a href="#keynote_0">
     <div class="session">Keynote 1</div><div class="session_title">David Ebert</div>
     </a>
     </td>
@@ -84,8 +84,8 @@
 
   <tr class="normal">
     <td colspan="2"></td>
-    <td>Reception (Faculy House)</td>
-    <td>Banquit (Yangjae)</td>
+    <td>Reception (Faculty House)</td>
+    <td>Banquet (Yangjae)</td>
   </tr>
 
   
