added workshops table

--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -34,18 +34,18 @@
 <%= subheader("News") %>
 <ul class="important_dates">
   <li>
-    Mar 7] The early bird registration ends at March 17!
+      Apr 14] Workshops (PacificVAST) <%= link_to "schedules", programs_path(:anchor=>"workshops") %> are updated.
   </li>
-  <li>
-      Mar 7] Conference <%= link_to "program and keynote talks", programs_path %> are updated.
-  </li>
-  <li>
-    Feb]
-      <%= link_to "Registration", registration_path, :target=>"_blank" %> is now available!
-  </li>
-  <li>
-    Feb] <%= link_to "Accommodation information", venue_path(:anchor=>"accommodations") %> was updated.
-  </li>
+    <li>
+        Mar 7] Conference <%= link_to "program and keynote talks", programs_path %> are updated.
+    </li>
+    <li>
+      Feb]
+        <%= link_to "Registration", registration_path, :target=>"_blank" %> is now available!
+    </li>
+    <li>
+      Feb] <%= link_to "Accommodation information", venue_path(:anchor=>"accommodations") %> was updated.
+    </li>
 </ul>
 
 <%= subheader("Sponsors") %>
