--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -89,11 +89,105 @@
 
   <tr class="normal">
     <td colspan="2"></td>
-    <td>Reception (Faculty House)</td>
-    <td>Banquet (Yangjae)</td>
+    <td>Reception (Faculty Club)<br>18:30~</td>
+    <td>Banquet (Yangjae)<br>19:00~</td>
   </tr>
 
 
+</table>
+<ul class="caption">
+  <li><b>Reception (Apr 19, 18:30~): Faculty Club</b><br>
+    We will take a walk altogether to the faculty club for about 20 mins.
+  </li>
+
+  <li><b>Banquet (Apr 20, 19:00~) : Diodia Buffet, El tower, 213, Gangnam-daero, Seocho-Gu, Seoul</b><br>
+    Buses will leave in front of Hoam Faculty House around <i>6:00 PM</i>.<br>Return buses will leave Diodia around <i>9:00 PM</i>.
+  </li>
+
+
+</ul>
+
+<h3 id="workshops">Workshops (PacificVAST) Schedules</h3>
+
+<table class="program_time_table">
+  <tr class="normal">
+    <th>08:00 - 09:00</th>
+    <td class="registration" >Registration</td>
+  </tr>
+
+  <tr class="normal">
+    <th>09:00 - 09:10</th>
+    <td>Opening Remarks</td>
+  </tr>
+
+  <tr class="normal">
+    <th>09:10 - 10:00</th>
+    <td>
+      <a href="#keynote_0">
+        <div class="session">PacificVAST Keynote talk I</div>
+        <div class="session_title">Kwan-Liu Ma, University of California, Davis</div>
+      </a>
+    </td>
+  </tr>
+
+  <tr class="normal">
+    <th>10:00 - 10:20</th>
+    <%= cell_coffee(1) %>
+  </tr>
+
+  <tr class="normal">
+    <th>10:20 - 11:40</th>
+
+    <td>
+    <a href="#keynote_1">
+    <div class="session">Invited Talks I</div>
+    <div class="session_title">YingCai Wu, Daniel Weiskopf</div>
+    </a>
+    </td>
+  </tr>
+
+<tr class="normal">
+    <th>11:40 - 13:30</th>
+    <td class="lunch">Lunch break</td>
+  </tr>
+<tr class="normal">
+    <th>13:30 - 14:20</th>
+    <td>
+      <a href="#keynote_0">
+        <div class="session">PacificVAST Keynote talk II</div>
+        <div class="session_title">Bongshin Lee, Microsoft Research</div>
+      </a>
+    </td>
+  </tr>
+
+<tr class="normal">
+    <th>14:20 - 14:40</th>
+    <%= cell_coffee(1) %>
+  </tr>
+
+  <tr class="normal">
+    <th>14:40 - 16:00</th>
+    <td>
+    <a href="#keynote_1">
+    <div class="session">Invited Talks II</div>
+    <div class="session_title">Xiaoru Yuan, Seok-Hee Hong</div>
+    </a>
+    </td>
+  </tr>
+
+
+<tr class="normal">
+    <th>16:00 - 16:20</th>
+    <%= cell_coffee(1) %>
+  </tr>
+
+  <tr class="normal">
+    <th>16:20 - 17:30</th>
+    <td>
+    <div class="session">Panel Discussion</div>
+    <div class="session_title">Chaoli Wang, Jaegul Choo, Kwan-Liu Ma, and Yun Jang</div>
+    </td>
+  </tr>
 </table>
 
 <%= subheader("Keynotes") %>
