--- a/app/assets/stylesheets/programs.scss
+++ b/app/assets/stylesheets/programs.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Programs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul.caption{
+  list-style-type: none;
+  font-size: 14px;
+  li{
+    margin-top: 14px;
+  }
+}
