--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -7,12 +7,12 @@
       <th width="21%"><span class="title">Day 4</span><br><span class="date">Apr 21</span></th>
   </tr>
   <tr class="normal">
-    <th>08:00 - 08:40</th>
+    <th>08:00 - 08:30</th>
     <td colspan="4" class="registration" >Registration</td>
   </tr>
 
   <tr class="normal">
-    <th>08:40 - 09:00</th>
+    <th>08:30 - 09:00</th>
     <td rowspan="11" class="vast">Pacific VAST</td>
     <td>Opening</td>
     <td>Posters Fast-forward</td>
@@ -90,7 +90,7 @@
   <tr class="normal">
     <td colspan="2"></td>
     <td>Reception (Faculty Club)<br>18:30~</td>
-    <td>Banquet (Yangjae)<br>19:00~</td>
+    <td>Banquet (Diodia)<br>19:00~</td>
   </tr>
 
 
@@ -100,7 +100,7 @@
     We will take a walk altogether to the faculty club for about 20 mins.
   </li>
 
-  <li><b>Banquet (Apr 20, 19:00~) : Diodia Buffet, El tower, 213, Gangnam-daero, Seocho-Gu, Seoul</b><br>
+  <li><b>Banquet (Apr 20, 19:00~) : Diodia, El tower, 213, Gangnam-daero, Seocho-Gu, Seoul</b><br>
     Buses will leave in front of Hoam Faculty House around <i>6:00 PM</i>.<br>Return buses will leave Diodia around <i>9:00 PM</i>.
   </li>
 
@@ -123,7 +123,7 @@
   <tr class="normal">
     <th>09:10 - 10:00</th>
     <td>
-      <a href="#keynote_0">
+      <a href="#workshop_keynote_1">
         <div class="session">PacificVAST Keynote talk I</div>
         <div class="session_title">Kwan-Liu Ma, University of California, Davis</div>
       </a>
@@ -139,7 +139,7 @@
     <th>10:20 - 11:40</th>
 
     <td>
-    <a href="#keynote_1">
+    <a href="#workshop_talk_1">
     <div class="session">Invited Talks I</div>
     <div class="session_title">YingCai Wu, Daniel Weiskopf</div>
     </a>
@@ -153,7 +153,7 @@
 <tr class="normal">
     <th>13:30 - 14:20</th>
     <td>
-      <a href="#keynote_0">
+    <a href="#workshop_keynote_2">
         <div class="session">PacificVAST Keynote talk II</div>
         <div class="session_title">Bongshin Lee, Microsoft Research</div>
       </a>
@@ -168,7 +168,7 @@
   <tr class="normal">
     <th>14:40 - 16:00</th>
     <td>
-    <a href="#keynote_1">
+    <a href="#workshop_talk_3">
     <div class="session">Invited Talks II</div>
     <div class="session_title">Xiaoru Yuan, Seok-Hee Hong</div>
     </a>
@@ -231,3 +231,12 @@
     <%= render :partial=>'program_element', :locals=>{:program=>paper} %>
   <% end %>
 </ul>
+
+<% @workshops.each do |key, value| %>
+  <%= subheader(key) %>
+  <ul class="program_list">
+    <% value.each do |workshop| %>
+      <%= render :partial=>'workshop_element', :locals=>{:workshop=>workshop} %>
+    <% end %>
+  </ul>
+<% end %>
