added 10 years of pacificvis

--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -34,6 +34,9 @@
 <%= subheader("News") %>
 <ul class="important_dates">
   <li>
+    Apr 17] We announce <%= link_to "10 years of PacificVis", "/showcases/index.html" %> showcase!
+  </li>
+  <li>
       Apr 14] Workshops (PacificVAST) <%= link_to "schedules", programs_path(:anchor=>"workshops") %> are updated.
   </li>
     <li>
