--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       <%= content_tag :ul, id: "gnb" do %>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Programs", programs_path %></li>
-        <li><%= link_to "Call for Participation", cfp_path %></li>
+        <li><%= link_to "Awards", awards_path %></li>
+        <li><%= link_to "Calls", cfp_path %></li>
         <li><%= link_to "Organizers", committee_path %></li>
         <li><%= link_to "Travel+Venue", venue_path %></li>
         <li><%= link_to "Registration", registration_path, :class=>"special_button" %></li>
